# Primordia-AI

./: CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  pytest_output.txt
.antigravity/: ARCHITECTURE.md  CONSTRAINTS.md
.specify/memory/: constitution.md
.specify/specs/001-state-encoding-heuristics/: spec.md  tasks.md
.specify/specs/021-position-eval/: plan.md  spec.md  tasks.md
.specify/specs/022-opening-book/: plan.md  spec.md  tasks.md
.specify/specs/023-state-encoder/: plan.md  spec.md  tasks.md
features/: integrity.feature
features/steps/: integrity_steps.py
specs/001-foundation/: analysis.md  plan.md  spec.md
src/primordia/: __init__.py  database.py  encoding.py  evaluation.py  integrity.py  models.py  opening_book.py  opening_models.py
src/primordia_ai/: health.py
tests/: test_database.py  test_encoding.py  test_models.py  test_opening_book_types.py
