[project]
name = "primordia"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brandon Fox", email = "bfoxtrotfarm@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
